--- a/dining-hall-wait-times/package.json
+++ b/dining-hall-wait-times/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@react-native-firebase/app": "^12.8.0",
     "@react-native-firebase/firestore": "^12.8.0",
+    "dotenv": "^10.0.0",
     "expo": "~42.0.1",
     "expo-firebase-analytics": "~4.1.0",
     "expo-status-bar": "~1.0.4",
-    "firebase": "^9.0.2",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
